# lppl_new

./: .gitignore  Cargo.toml
data/testing/: MC1.csv  MC2.csv
examples/: dotcom.rs
fit/production/: fit_Crypto_00.csv  fit_Crypto_1000sats.csv  fit_Crypto_1cat.csv  fit_Crypto_1inch.csv  fit_Crypto_1inch:.csv  fit_Crypto_3crv.csv  fit_Crypto_aa.csv  fit_Crypto_aave.csv  fit_Crypto_aave3s.csv  fit_Crypto_abbc.csv  fit_Crypto_abt.csv  fit_Crypto_aca.csv  fit_Crypto_ace.csv  fit_Crypto_ach.csv  fit_Crypto_acm.csv  fit_Crypto_acq.csv  fit_Crypto_acs.csv  fit_Crypto_act.csv  fit_Crypto_ada.csv  fit_Crypto_ada3s.csv  fit_Crypto_adx.csv  fit_Crypto_ae.csv  fit_Crypto_aeg.csv  fit_Crypto_aergo.csv  fit_Crypto_aero.csv  fit_Crypto_aeur.csv  fit_Crypto_aevo.csv  fit_Crypto_agld.csv  fit_Crypto_ai.csv  fit_Crypto_aiepk.csv  fit_Crypto_aioz.csv  fit_Crypto_aipad.csv  fit_Crypto_aitech.csv  fit_Crypto_akro.csv  fit_Crypto_akt.csv  fit_Crypto_alcx.csv  fit_Crypto_aleph.csv  fit_Crypto_alg.csv  fit_Crypto_algo.csv  fit_Crypto_alice.csv  (+1048 more)
fit/testing/: fit_LC1_A.csv  fit_LC1_AAP.csv  fit_LC1_AAPL.csv  fit_LC1_ABNB.csv  fit_LC1_ACGL.csv  fit_LC1_ACM.csv  fit_LC1_ACN.csv  fit_LC1_ADI.csv  fit_LC1_ADM.csv  fit_LC1_ADP.csv  fit_LC1_AEE.csv  fit_LC1_AES.csv  fit_LC1_AFG.csv  fit_LC1_AGCO.csv  (+4033 more)
performance/: LC.csv  MC.csv  Micro.csv  SC.csv  crypto_all_20241108.csv  crypto_buys_20241108.csv  crypto_sells_20241108.csv  crypto_testing.csv  crypto_testing_scaled.csv  stocks_testing.csv
src/: argmin_mod.rs  backtester.rs  clickhouse_mod.rs  cmaes_mod.rs  cmaes_restarts.rs  lib.rs  main.rs
(+5029 files in other folders)
